parser/parser.output
Nonterminals useless in grammar

   struct_or_union
   unary_operator
   parameter_type_list
   parameter_list
   parameter_declaration


Terminals unused in grammar

   NUMBER
   NOTEQUAL
   NOT
   COMPL
   LBRACKET
   RBEACKET
   ENUM
   INLINE
   RESTRICT
   SIZEOF
   STRUCT
   UNION


Rules useless in grammar

  138 struct_or_union: STRUCT
  139                | UNION

  140 unary_operator: BITAND
  141               | MUL
  142               | PLUS
  143               | MINUS
  144               | COMPL
  145               | NOT

  146 parameter_type_list: parameter_list

  147 parameter_list: parameter_declaration
  148               | parameter_list COMMA parameter_declaration

  149 parameter_declaration: declaration_specifiers
  150                      | declaration_specifiers declarator


State 211 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declarator compound_statement
    6                    | declarator declarations compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declaration_specifiers declarator declarations compound_statement

    9 declaration_specifier: storage_class_specifier
   10                      | type_specifier
   11                      | type_qualifier

   12 storage_class_specifier: AUTO
   13                        | REGISTER
   14                        | STATIC
   15                        | EXTERN
   16                        | TYPEDEF

   17 type_specifier: VOID
   18               | CHAR
   19               | SHORT
   20               | INT
   21               | LONG
   22               | FLOAT
   23               | DOUBLE
   24               | SIGNED
   25               | UNSIGNED

   26 specifier_qualifier: type_specifier
   27                    | type_qualifier

   28 declarator: direct_declarator

   29 type_qualifier: CONST
   30               | VOLATILE

   31 direct_declarator: IDENTIFIER
   32                  | LPAREN declarator RPAREN

   33 constant_expression: conditional_expression

   34 conditional_expression: logical_or_expression
   35                       | logical_or_expression QUESTION expression COLON conditional_expression

   36 logical_or_expression: logical_and_expression
   37                      | logical_or_expression OR logical_and_expression

   38 logical_and_expression: inclusive_or_expression
   39                       | logical_and_expression AND inclusive_or_expression

   40 inclusive_or_expression: exclusive_or_expression
   41                        | inclusive_or_expression BITOR exclusive_or_expression

   42 exclusive_or_expression: and_expression
   43                        | exclusive_or_expression BITXOR and_expression

   44 and_expression: equality_expression
   45               | and_expression BITAND equality_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQUAL relational_expression

   48 relational_expression: shift_expression
   49                      | relational_expression LESS shift_expression
   50                      | relational_expression GREATER shift_expression
   51                      | relational_expression LTEQUAL shift_expression
   52                      | relational_expression GTEQUAL shift_expression

   53 shift_expression: additive_expression
   54                 | shift_expression SHIFTL additive_expression
   55                 | shift_expression SHIFTR additive_expression

   56 additive_expression: multiplicative_expression
   57                    | additive_expression PLUS multiplicative_expression
   58                    | additive_expression MINUS multiplicative_expression

   59 multiplicative_expression: cast_expression
   60                          | multiplicative_expression MUL cast_expression
   61                          | multiplicative_expression DIV cast_expression
   62                          | multiplicative_expression MOD cast_expression

   63 cast_expression: unary_expression
   64                | LPAREN type_name RPAREN cast_expression

   65 unary_expression: postfix_expression

   66 postfix_expression: primary_expression

   67 primary_expression: IDENTIFIER
   68                   | STRING
   69                   | LPAREN expression RPAREN

   70 expression: assignment_expression
   71           | expression COMMA assignment_expression

   72 assignment_expression: conditional_expression
   73                      | unary_expression assignment_operator assignment_expression

   74 assignment_operator: ASSIGN
   75                    | MULASN
   76                    | DIVASN
   77                    | MODASN
   78                    | PLUSASN
   79                    | MINUSASN
   80                    | SHLASN
   81                    | SHRASN
   82                    | ANDASN
   83                    | XORASN
   84                    | ORASN

   85 type_name: specifier_qualifiers

   86 declaration: declaration_specifiers SEMI
   87            | declaration_specifiers init_declarators SEMI

   88 init_declarator: declarator
   89                | declarator ASSIGN initializer

   90 initializer: assignment_expression
   91            | LCURLY initializer_list RCURLY
   92            | LCURLY initializer_list COMMA RCURLY

   93 initializer_list: initializer
   94                 | initializer_list COMMA initializer

   95 compound_statement: LCURLY RCURLY
   96                   | LCURLY statements RCURLY
   97                   | LCURLY declarations RCURLY
   98                   | LCURLY declarations statements RCURLY

   99 statement: labeled_statement
  100          | expression_statement
  101          | compound_statement
  102          | selection_statement
  103          | iteration_statement
  104          | jump_statement

  105 labeled_statement: IDENTIFIER COLON statement
  106                  | CASE constant_expression COLON statement
  107                  | DEFAULT COLON statement

  108 expression_statement: SEMI
  109                     | expression SEMI

  110 selection_statement: IF LPAREN expression RPAREN statement
  111                    | IF LPAREN expression RPAREN statement ELSE statement
  112                    | SWITCH LPAREN expression RPAREN statement

  113 iteration_statement: WHILE LPAREN expression RPAREN statement
  114                    | DO statement WHILE LPAREN expression RPAREN SEMI
  115                    | FOR LPAREN SEMI SEMI RPAREN statement
  116                    | FOR LPAREN SEMI SEMI expression RPAREN statement
  117                    | FOR LPAREN SEMI expression SEMI RPAREN statement
  118                    | FOR LPAREN SEMI expression SEMI expression RPAREN statement
  119                    | FOR LPAREN expression SEMI SEMI RPAREN statement
  120                    | FOR LPAREN expression SEMI SEMI expression RPAREN statement
  121                    | FOR LPAREN expression SEMI expression SEMI RPAREN statement
  122                    | FOR LPAREN expression SEMI expression SEMI expression RPAREN statement

  123 jump_statement: GOTO IDENTIFIER SEMI
  124               | CONTINUE SEMI
  125               | BREAK SEMI
  126               | RETURN SEMI
  127               | RETURN expression SEMI

  128 declaration_specifiers: declaration_specifier
  129                       | declaration_specifier declaration_specifiers

  130 declarations: declaration
  131             | declarations declaration

  132 specifier_qualifiers: specifier_qualifier
  133                     | specifier_qualifier specifier_qualifiers

  134 init_declarators: init_declarator
  135                 | init_declarator init_declarators

  136 statements: statement
  137           | statements statement


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 31 67 105 123
NUMBER (259)
STRING (260) 68
COMMA (261) 71 92 94
COLON (262) 35 105 106 107
SEMI (263) 86 87 108 109 114 115 116 117 118 119 120 121 122 123 124
    125 126 127
MINUS (264) 58
PLUS (265) 57
DIV (266) 61
MUL (267) 60
MOD (268) 62
ASSIGN (269) 74 89
EQUAL (270) 47
NOTEQUAL (271)
LESS (272) 49
LTEQUAL (273) 51
GREATER (274) 50
GTEQUAL (275) 52
SHIFTL (276) 54
SHIFTR (277) 55
PLUSASN (278) 78
MINUSASN (279) 79
MULASN (280) 75
DIVASN (281) 76
MODASN (282) 77
SHLASN (283) 80
SHRASN (284) 81
ANDASN (285) 82
XORASN (286) 83
ORASN (287) 84
AND (288) 39
OR (289) 37
NOT (290)
COMPL (291)
BITAND (292) 45
BITOR (293) 41
BITXOR (294) 43
QUESTION (295) 35
LPAREN (296) 32 64 69 110 111 112 113 114 115 116 117 118 119 120 121
    122
RPAREN (297) 32 64 69 110 111 112 113 114 115 116 117 118 119 120 121
    122
LBRACKET (298)
RBEACKET (299)
LCURLY (300) 91 92 95 96 97 98
RCURLY (301) 91 92 95 96 97 98
AUTO (302) 12
BREAK (303) 125
CASE (304) 106
CHAR (305) 18
CONST (306) 29
CONTINUE (307) 124
DEFAULT (308) 107
DO (309) 114
DOUBLE (310) 23
ELSE (311) 111
ENUM (312)
EXTERN (313) 15
FLOAT (314) 22
FOR (315) 115 116 117 118 119 120 121 122
GOTO (316) 123
IF (317) 110 111
INLINE (318)
INT (319) 20
LONG (320) 21
REGISTER (321) 13
RESTRICT (322)
RETURN (323) 126 127
SHORT (324) 19
SIGNED (325) 24
SIZEOF (326)
STATIC (327) 14
STRUCT (328)
SWITCH (329) 112
TYPEDEF (330) 16
UNION (331)
UNSIGNED (332) 25
VOID (333) 17
VOLATILE (334) 30
WHILE (335) 113 114


Nonterminals, with rules where they appear

$accept (81)
    on left: 0
translation_unit (82)
    on left: 1 2, on right: 0 2
external_declaration (83)
    on left: 3 4, on right: 1 2
function_definition (84)
    on left: 5 6 7 8, on right: 3
declaration_specifier (85)
    on left: 9 10 11, on right: 128 129
storage_class_specifier (86)
    on left: 12 13 14 15 16, on right: 9
type_specifier (87)
    on left: 17 18 19 20 21 22 23 24 25, on right: 10 26
specifier_qualifier (88)
    on left: 26 27, on right: 132 133
declarator (89)
    on left: 28, on right: 5 6 7 8 32 88 89
type_qualifier (90)
    on left: 29 30, on right: 11 27
direct_declarator (91)
    on left: 31 32, on right: 28
constant_expression (92)
    on left: 33, on right: 106
conditional_expression (93)
    on left: 34 35, on right: 33 35 72
logical_or_expression (94)
    on left: 36 37, on right: 34 35 37
logical_and_expression (95)
    on left: 38 39, on right: 36 37 39
inclusive_or_expression (96)
    on left: 40 41, on right: 38 39 41
exclusive_or_expression (97)
    on left: 42 43, on right: 40 41 43
and_expression (98)
    on left: 44 45, on right: 42 43 45
equality_expression (99)
    on left: 46 47, on right: 44 45 47
relational_expression (100)
    on left: 48 49 50 51 52, on right: 46 47 49 50 51 52
shift_expression (101)
    on left: 53 54 55, on right: 48 49 50 51 52 54 55
additive_expression (102)
    on left: 56 57 58, on right: 53 54 55 57 58
multiplicative_expression (103)
    on left: 59 60 61 62, on right: 56 57 58 60 61 62
cast_expression (104)
    on left: 63 64, on right: 59 60 61 62 64
unary_expression (105)
    on left: 65, on right: 63 73
postfix_expression (106)
    on left: 66, on right: 65
primary_expression (107)
    on left: 67 68 69, on right: 66
expression (108)
    on left: 70 71, on right: 35 69 71 109 110 111 112 113 114 116
    117 118 119 120 121 122 127
assignment_expression (109)
    on left: 72 73, on right: 70 71 73 90
assignment_operator (110)
    on left: 74 75 76 77 78 79 80 81 82 83 84, on right: 73
type_name (111)
    on left: 85, on right: 64
declaration (112)
    on left: 86 87, on right: 4 130 131
init_declarator (113)
    on left: 88 89, on right: 134 135
initializer (114)
    on left: 90 91 92, on right: 89 93 94
initializer_list (115)
    on left: 93 94, on right: 91 92 94
compound_statement (116)
    on left: 95 96 97 98, on right: 5 6 7 8 101
statement (117)
    on left: 99 100 101 102 103 104, on right: 105 106 107 110 111
    112 113 114 115 116 117 118 119 120 121 122 136 137
labeled_statement (118)
    on left: 105 106 107, on right: 99
expression_statement (119)
    on left: 108 109, on right: 100
selection_statement (120)
    on left: 110 111 112, on right: 102
iteration_statement (121)
    on left: 113 114 115 116 117 118 119 120 121 122, on right: 103
jump_statement (122)
    on left: 123 124 125 126 127, on right: 104
declaration_specifiers (123)
    on left: 128 129, on right: 7 8 86 87 129
declarations (124)
    on left: 130 131, on right: 6 8 97 98 131
specifier_qualifiers (125)
    on left: 132 133, on right: 85 133
init_declarators (126)
    on left: 134 135, on right: 87 135
statements (127)
    on left: 136 137, on right: 96 98 137


state 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    LPAREN      shift, and go to state 2
    AUTO        shift, and go to state 3
    CHAR        shift, and go to state 4
    CONST       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    EXTERN      shift, and go to state 7
    FLOAT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    SHORT       shift, and go to state 12
    SIGNED      shift, and go to state 13
    STATIC      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18

    translation_unit         go to state 19
    external_declaration     go to state 20
    function_definition      go to state 21
    declaration_specifier    go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    declarator               go to state 25
    type_qualifier           go to state 26
    direct_declarator        go to state 27
    declaration              go to state 28
    declaration_specifiers   go to state 29


state 1

   31 direct_declarator: IDENTIFIER .

    $default  reduce using rule 31 (direct_declarator)


state 2

   32 direct_declarator: LPAREN . declarator RPAREN

    IDENTIFIER  shift, and go to state 1
    LPAREN      shift, and go to state 2

    declarator         go to state 30
    direct_declarator  go to state 27


state 3

   12 storage_class_specifier: AUTO .

    $default  reduce using rule 12 (storage_class_specifier)


state 4

   18 type_specifier: CHAR .

    $default  reduce using rule 18 (type_specifier)


state 5

   29 type_qualifier: CONST .

    $default  reduce using rule 29 (type_qualifier)


state 6

   23 type_specifier: DOUBLE .

    $default  reduce using rule 23 (type_specifier)


state 7

   15 storage_class_specifier: EXTERN .

    $default  reduce using rule 15 (storage_class_specifier)


state 8

   22 type_specifier: FLOAT .

    $default  reduce using rule 22 (type_specifier)


state 9

   20 type_specifier: INT .

    $default  reduce using rule 20 (type_specifier)


state 10

   21 type_specifier: LONG .

    $default  reduce using rule 21 (type_specifier)


state 11

   13 storage_class_specifier: REGISTER .

    $default  reduce using rule 13 (storage_class_specifier)


state 12

   19 type_specifier: SHORT .

    $default  reduce using rule 19 (type_specifier)


state 13

   24 type_specifier: SIGNED .

    $default  reduce using rule 24 (type_specifier)


state 14

   14 storage_class_specifier: STATIC .

    $default  reduce using rule 14 (storage_class_specifier)


state 15

   16 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 16 (storage_class_specifier)


state 16

   25 type_specifier: UNSIGNED .

    $default  reduce using rule 25 (type_specifier)


state 17

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


state 18

   30 type_qualifier: VOLATILE .

    $default  reduce using rule 30 (type_qualifier)


state 19

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 31
    IDENTIFIER  shift, and go to state 1
    LPAREN      shift, and go to state 2
    AUTO        shift, and go to state 3
    CHAR        shift, and go to state 4
    CONST       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    EXTERN      shift, and go to state 7
    FLOAT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    SHORT       shift, and go to state 12
    SIGNED      shift, and go to state 13
    STATIC      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18

    external_declaration     go to state 32
    function_definition      go to state 21
    declaration_specifier    go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    declarator               go to state 25
    type_qualifier           go to state 26
    direct_declarator        go to state 27
    declaration              go to state 28
    declaration_specifiers   go to state 29


state 20

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


state 21

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 22

  128 declaration_specifiers: declaration_specifier .
  129                       | declaration_specifier . declaration_specifiers

    AUTO      shift, and go to state 3
    CHAR      shift, and go to state 4
    CONST     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    EXTERN    shift, and go to state 7
    FLOAT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 128 (declaration_specifiers)

    declaration_specifier    go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 26
    declaration_specifiers   go to state 33


state 23

    9 declaration_specifier: storage_class_specifier .

    $default  reduce using rule 9 (declaration_specifier)


state 24

   10 declaration_specifier: type_specifier .

    $default  reduce using rule 10 (declaration_specifier)


state 25

    5 function_definition: declarator . compound_statement
    6                    | declarator . declarations compound_statement

    LCURLY    shift, and go to state 34
    AUTO      shift, and go to state 3
    CHAR      shift, and go to state 4
    CONST     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    EXTERN    shift, and go to state 7
    FLOAT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18

    declaration_specifier    go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 26
    declaration              go to state 35
    compound_statement       go to state 36
    declaration_specifiers   go to state 37
    declarations             go to state 38


state 26

   11 declaration_specifier: type_qualifier .

    $default  reduce using rule 11 (declaration_specifier)


state 27

   28 declarator: direct_declarator .

    $default  reduce using rule 28 (declarator)


state 28

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 29

    7 function_definition: declaration_specifiers . declarator compound_statement
    8                    | declaration_specifiers . declarator declarations compound_statement
   86 declaration: declaration_specifiers . SEMI
   87            | declaration_specifiers . init_declarators SEMI

    IDENTIFIER  shift, and go to state 1
    SEMI        shift, and go to state 39
    LPAREN      shift, and go to state 2

    declarator         go to state 40
    direct_declarator  go to state 27
    init_declarator    go to state 41
    init_declarators   go to state 42


state 30

   32 direct_declarator: LPAREN declarator . RPAREN

    RPAREN  shift, and go to state 43


state 31

    0 $accept: translation_unit $end .

    $default  accept


state 32

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 33

  129 declaration_specifiers: declaration_specifier declaration_specifiers .

    $default  reduce using rule 129 (declaration_specifiers)


state 34

   95 compound_statement: LCURLY . RCURLY
   96                   | LCURLY . statements RCURLY
   97                   | LCURLY . declarations RCURLY
   98                   | LCURLY . declarations statements RCURLY

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 45
    SEMI        shift, and go to state 46
    LPAREN      shift, and go to state 47
    LCURLY      shift, and go to state 34
    RCURLY      shift, and go to state 48
    AUTO        shift, and go to state 3
    BREAK       shift, and go to state 49
    CASE        shift, and go to state 50
    CHAR        shift, and go to state 4
    CONST       shift, and go to state 5
    CONTINUE    shift, and go to state 51
    DEFAULT     shift, and go to state 52
    DO          shift, and go to state 53
    DOUBLE      shift, and go to state 6
    EXTERN      shift, and go to state 7
    FLOAT       shift, and go to state 8
    FOR         shift, and go to state 54
    GOTO        shift, and go to state 55
    IF          shift, and go to state 56
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RETURN      shift, and go to state 57
    SHORT       shift, and go to state 12
    SIGNED      shift, and go to state 13
    STATIC      shift, and go to state 14
    SWITCH      shift, and go to state 58
    TYPEDEF     shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    WHILE       shift, and go to state 59

    declaration_specifier      go to state 22
    storage_class_specifier    go to state 23
    type_specifier             go to state 24
    type_qualifier             go to state 26
    conditional_expression     go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    inclusive_or_expression    go to state 63
    exclusive_or_expression    go to state 64
    and_expression             go to state 65
    equality_expression        go to state 66
    relational_expression      go to state 67
    shift_expression           go to state 68
    additive_expression        go to state 69
    multiplicative_expression  go to state 70
    cast_expression            go to state 71
    unary_expression           go to state 72
    postfix_expression         go to state 73
    primary_expression         go to state 74
    expression                 go to state 75
    assignment_expression      go to state 76
    declaration                go to state 35
    compound_statement         go to state 77
    statement                  go to state 78
    labeled_statement          go to state 79
    expression_statement       go to state 80
    selection_statement        go to state 81
    iteration_statement        go to state 82
    jump_statement             go to state 83
    declaration_specifiers     go to state 37
    declarations               go to state 84
    statements                 go to state 85


state 35

  130 declarations: declaration .

    $default  reduce using rule 130 (declarations)


state 36

    5 function_definition: declarator compound_statement .

    $default  reduce using rule 5 (function_definition)


state 37

   86 declaration: declaration_specifiers . SEMI
   87            | declaration_specifiers . init_declarators SEMI

    IDENTIFIER  shift, and go to state 1
    SEMI        shift, and go to state 39
    LPAREN      shift, and go to state 2

    declarator         go to state 86
    direct_declarator  go to state 27
    init_declarator    go to state 41
    init_declarators   go to state 42


state 38

    6 function_definition: declarator declarations . compound_statement
  131 declarations: declarations . declaration

    LCURLY    shift, and go to state 34
    AUTO      shift, and go to state 3
    CHAR      shift, and go to state 4
    CONST     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    EXTERN    shift, and go to state 7
    FLOAT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18

    declaration_specifier    go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 26
    declaration              go to state 87
    compound_statement       go to state 88
    declaration_specifiers   go to state 37


state 39

   86 declaration: declaration_specifiers SEMI .

    $default  reduce using rule 86 (declaration)


state 40

    7 function_definition: declaration_specifiers declarator . compound_statement
    8                    | declaration_specifiers declarator . declarations compound_statement
   88 init_declarator: declarator .
   89                | declarator . ASSIGN initializer

    ASSIGN    shift, and go to state 89
    LCURLY    shift, and go to state 34
    AUTO      shift, and go to state 3
    CHAR      shift, and go to state 4
    CONST     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    EXTERN    shift, and go to state 7
    FLOAT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    REGISTER  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 88 (init_declarator)

    declaration_specifier    go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 26
    declaration              go to state 35
    compound_statement       go to state 90
    declaration_specifiers   go to state 37
    declarations             go to state 91


state 41

  134 init_declarators: init_declarator .
  135                 | init_declarator . init_declarators

    IDENTIFIER  shift, and go to state 1
    LPAREN      shift, and go to state 2

    $default  reduce using rule 134 (init_declarators)

    declarator         go to state 86
    direct_declarator  go to state 27
    init_declarator    go to state 41
    init_declarators   go to state 92


state 42

   87 declaration: declaration_specifiers init_declarators . SEMI

    SEMI  shift, and go to state 93


state 43

   32 direct_declarator: LPAREN declarator RPAREN .

    $default  reduce using rule 32 (direct_declarator)


state 44

   67 primary_expression: IDENTIFIER .
  105 labeled_statement: IDENTIFIER . COLON statement

    COLON  shift, and go to state 94

    $default  reduce using rule 67 (primary_expression)


state 45

   68 primary_expression: STRING .

    $default  reduce using rule 68 (primary_expression)


state 46

  108 expression_statement: SEMI .

    $default  reduce using rule 108 (expression_statement)


state 47

   64 cast_expression: LPAREN . type_name RPAREN cast_expression
   69 primary_expression: LPAREN . expression RPAREN

    IDENTIFIER  shift, and go to state 95
    STRING      shift, and go to state 45
    LPAREN      shift, and go to state 47
    CHAR        shift, and go to state 4
    CONST       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    FLOAT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18

    type_specifier             go to state 96
    specifier_qualifier        go to state 97
    type_qualifier             go to state 98
    conditional_expression     go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    inclusive_or_expression    go to state 63
    exclusive_or_expression    go to state 64
    and_expression             go to state 65
    equality_expression        go to state 66
    relational_expression      go to state 67
    shift_expression           go to state 68
    additive_expression        go to state 69
    multiplicative_expression  go to state 70
    cast_expression            go to state 71
    unary_expression           go to state 72
    postfix_expression         go to state 73
    primary_expression         go to state 74
    expression                 go to state 99
    assignment_expression      go to state 76
    type_name                  go to state 100
    specifier_qualifiers       go to state 101


state 48

   95 compound_statement: LCURLY RCURLY .

    $default  reduce using rule 95 (compound_statement)


state 49

  125 jump_statement: BREAK . SEMI

    SEMI  shift, and go to state 102


state 50

  106 labeled_statement: CASE . constant_expression COLON statement

    IDENTIFIER  shift, and go to state 95
    STRING      shift, and go to state 45
    LPAREN      shift, and go to state 47

    constant_expression        go to state 103
    conditional_expression     go to state 104
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    inclusive_or_expression    go to state 63
    exclusive_or_expression    go to state 64
    and_expression             go to state 65
    equality_expression        go to state 66
    relational_expression      go to state 67
    shift_expression           go to state 68
    additive_expression        go to state 69
    multiplicative_expression  go to state 70
    cast_expression            go to state 71
    unary_expression           go to state 105
    postfix_expression         go to state 73
    primary_expression         go to state 74


state 51

  124 jump_statement: CONTINUE . SEMI

    SEMI  shift, and go to state 106


state 52

  107 labeled_statement: DEFAULT . COLON statement

    COLON  shift, and go to state 107


state 53

  114 iteration_statement: DO . statement WHILE LPAREN expression RPAREN SEMI

    IDENTIFIER  shift, and go to state 44
    STRING      shift, and go to state 45
    SEMI        shift, and go to state 46
    LPAREN      shift, and go to state 47
    LCURLY      shift, and go to state 34
    BREAK       shift, and go to state 49
    CASE        shift, and go to state 50
    CONTINUE    shift, and go to state 51
    DEFAULT     shift, and go to state 52
    DO          shift, and go to state 53
    FOR         shift, and go to state 54
    GOTO        shift, and go to state 55
    IF          shift, and go to state 56
    RETURN      shift, and go to state 57
    SWITCH      shift, and go to state 58
    WHILE       shift, and go to state 59

    conditional_expression     go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    inclusive_or_expression    go to state 63
    exclusive_or_expression    go to state 64
    and_expression             go to state 65
    equality_expression        go to state 66
    relational_expression      go to state 67
    shift_expression           go to state 68
    additive_expression        go to state 69
    multiplicative_expression  go to state 70
    cast_expression            go to state 71
    unary_expression           go to state 72
    postfix_expression         go to state 73
    primary_expression         go to state 74
    expression                 go to state 75
    assignment_expression      go to state 76
    compound_statement         go to state 77
    statement                  go to state 108
    labeled_statement          go to state 79
    expression_statement       go to state 80
    selection_statement        go to state 81
    iteration_statement        go to state 82
    jump_statement             go to state 83


state 54

  115 iteration_statement: FOR . LPAREN SEMI SEMI RPAREN statement
  116                    | FOR . LPAREN SEMI SEMI expression RPAREN statement
  117                    | FOR . LPAREN SEMI expression SEMI RPAREN statement
  118                    | FOR . LPAREN SEMI expression SEMI expression RPAREN statement
  119                    | FOR . LPAREN expression SEMI SEMI RPAREN statement
  120                    | FOR . LPAREN expression SEMI SEMI expression RPAREN statement
  121                    | FOR . LPAREN expression SEMI expression SEMI RPAREN statement
  122                    | FOR . LPAREN expression SEMI expression SEMI expression RPAREN statement

    LPAREN  shift, and go to state 109


state 55

  123 jump_statement: GOTO . IDENTIFIER SEMI

    IDENTIFIER  shift, and go to state 110


state 56

  110 selection_statement: IF . LPAREN expression RPAREN statement
  111                    | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 111


state 57

  126 jump_statement: RETURN . SEMI
  127               | RETURN . expression SEMI

    IDENTIFIER  shift, and go to state 95
    STRING      shift, and go to state 45
    SEMI        shift, and go to state 112
    LPAREN      shift, and go to state 47

    conditional_expression     go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    inclusive_or_expression    go to state 63
    exclusive_or_expression    go to state 64
    and_expression             go to state 65
    equality_expression        go to state 66
    relational_expression      go to state 67
    shift_expression           go to state 68
    additive_expression        go to state 69
    multiplicative_expression  go to state 70
    cast_expression            go to state 71
    unary_expression           go to state 72
    postfix_expression         go to state 73
    primary_expression         go to state 74
    expression                 go to state 113
    assignment_expression      go to state 76


state 58

  112 selection_statement: SWITCH . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 114


state 59

  113 iteration_statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 115


state 60

   72 assignment_expression: conditional_expression .

    $default  reduce using rule 72 (assignment_expression)


state 61

   34 conditional_expression: logical_or_expression .
   35                       | logical_or_expression . QUESTION expression COLON conditional_expression
   37 logical_or_expression: logical_or_expression . OR logical_and_expression

    OR        shift, and go to state 116
    QUESTION  shift, and go to state 117

    $default  reduce using rule 34 (conditional_expression)


state 62

   36 logical_or_expression: logical_and_expression .
   39 logical_and_expression: logical_and_expression . AND inclusive_or_expression

    AND  shift, and go to state 118

    $default  reduce using rule 36 (logical_or_expression)


state 63

   38 logical_and_expression: inclusive_or_expression .
   41 inclusive_or_expression: inclusive_or_expression . BITOR exclusive_or_expression

    BITOR  shift, and go to state 119

    $default  reduce using rule 38 (logical_and_expression)


state 64

   40 inclusive_or_expression: exclusive_or_expression .
   43 exclusive_or_expression: exclusive_or_expression . BITXOR and_expression

    BITXOR  shift, and go to state 120

    $default  reduce using rule 40 (inclusive_or_expression)


state 65

   42 exclusive_or_expression: and_expression .
   45 and_expression: and_expression . BITAND equality_expression

    BITAND  shift, and go to state 121

    $default  reduce using rule 42 (exclusive_or_expression)


state 66

   44 and_expression: equality_expression .
   47 equality_expression: equality_expression . EQUAL relational_expression

    EQUAL  shift, and go to state 122

    $default  reduce using rule 44 (and_expression)


state 67

   46 equality_expression: relational_expression .
   49 relational_expression: relational_expression . LESS shift_expression
   50                      | relational_expression . GREATER shift_expression
   51                      | relational_expression . LTEQUAL shift_expression
   52                      | relational_expression . GTEQUAL shift_expression

    LESS     shift, and go to state 123
    LTEQUAL  shift, and go to state 124
    GREATER  shift, and go to state 125
    GTEQUAL  shift, and go to state 126

    $default  reduce using rule 46 (equality_expression)


state 68

   48 relational_expression: shift_expression .
   54 shift_expression: shift_expression . SHIFTL additive_expression
   55                 | shift_expression . SHIFTR additive_expression

    SHIFTL  shift, and go to state 127
    SHIFTR  shift, and go to state 128

    $default  reduce using rule 48 (relational_expression)


state 69

   53 shift_expression: additive_expression .
   57 additive_expression: additive_expression . PLUS multiplicative_expression
   58                    | additive_expression . MINUS multiplicative_expression

    MINUS  shift, and go to state 129
    PLUS   shift, and go to state 130

    $default  reduce using rule 53 (shift_expression)


state 70
